--- a/src/common/stylus/base.styl
+++ b/src/common/stylus/base.styl
@@ -3,6 +3,14 @@ body,html
 	font-weight: 200
 	font-family: 'PingFang SC','STHeitiSC-Light','Helvetica-Light',arial,sans-serif
 
+.clearfix
+	display: inline-block
+	&:after
+		display: block
+		content: ''
+		clear: both
+		display: hidden
+
 @media (min-device-pixel-ratio: 1.5), (-webkit-min-device-pixel-ratio: 1.5)
 	.border-bottom-1px
 		&:after
